# ts-unused-cleaner

./: .gitignore  .npmignore  Cargo.toml  LICENSE  PUBLISHING.md  README.md  package.json
example/: README.md  demo.sh  tuf.config.json
example/react/: .gitignore  index.html  package-lock.json  package.json
example/react/src/: App.tsx  index.css
example/react/src/components/: button.tsx  card.tsx  spinner.tsx  unused-modal.tsx
example/react/src/pages/: Home.tsx
example/react/src/types/: api.ts
example/react/src/utils/: api.ts
src/: config.rs  detector.rs  lib.rs  main.rs  reporter.rs  types.rs
