[package]
name = "ts-unused-finder"
version = "0.0.7"
edition = "2021"
authors = ["myzkey"]
description = "A fast Rust-based tool to detect unused TypeScript/JavaScript code including React components, types, interfaces, functions, variables, and enums"
license = "MIT"
repository = "https://github.com/myzkey/ts-unused-finder"
keywords = ["typescript", "javascript", "react", "unused", "dead-code", "analyzer"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ts-unused-finder"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
indicatif = "0.17"
swc_ecma_parser = "0.143"
swc_ecma_ast = "0.112"
swc_common = "0.33"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"